# pimcpp

./: .buildinfo  .gitignore  .gitmodules  Actions.html  Actions.md  Algorithm-Tuning-(Liquid-Helium-Tutorial).html  Algorithm-Tuning-(Liquid-Helium-Tutorial).md  Algorithm.html  Algorithm.md  Annotated.html  Annotated.md  Basic-helium-input-file.html  Basic-helium-input-file.md  BosonPicture.html  BosonPicture.md  Bulk-helium.html  Bulk-helium.md  CMakeLists.txt  CMakeLists.txt.BryanMac  CMakeLists.txt.Ethan  CMakeLists.txt.cab  CMakeLists.txt.kraken  CMakeLists.txt.sierra  Checking-Convergence-(Liquid-Helium-Tutorial).html  Checking-Convergence-(Liquid-Helium-Tutorial).md  Constructing-a-density-matrix.html  Constructing-a-density-matrix.md  Developer's-Guide.html  Developer's-Guide.md  FC7.html  FC7.md  Function.html  Function.md  Getting-Started.html  Getting_Started.html  H2.html  H2.md  Helium-File-2.html  Helium-File-2.md  HeliumSuperfluidInput-this.html  (+64 more)
CMake/: CMakeLists.txt.Ethan  CMakeLists.txt.chama  FindBlitz++.cmake  FindFFTW.cmake  FindGSL.cmake  FindHDF5.cmake  FindLapack.cmake  FindSPRNG.cmake
Examples/Hydrogen/: .gitignore
Examples/ParticleInABox/: ParticleInABox.in
Examples/SimpleHarmonicOscillator/: SHO.in  zero.PairAction
Scripts/: Analysis.py  C-input.py  Cusp.py  Energy.py  FG.py  H-box-input.py  H-input.py  Li-input.py  MPIClass.py  NodalModel.py  SHO.py  Stats.py  genDM.py  heg-input.py  printdm.py  units.py
_layouts/: base.html
_sources/: Algorithm-Tuning-(Liquid-Helium-Tutorial).txt  Constructing-a-density-matrix.txt  FC7.txt  Function.txt  Getting-Started.txt  Getting_Started.txt  Hydrogen-Molecule.txt  Importance-of-ShiftMove.txt  Input-Consistency.txt  Input.txt  Installing.txt  LoopRotating.txt  Moves.txt  Observables.txt  Parallel.txt  Path-Integral-Superfluidity.txt  PathPicture.txt  Samples.txt  TimeSlice-Relabelling.txt  Visualize.tcl.txt  WritingHeliumInputfile.txt  index.txt
doctrees/: Actions.doctree  Algorithm-Tuning-(Liquid-Helium-Tutorial).doctree  Algorithm.doctree  Annotated.doctree  Basic-helium-input-file.doctree  BosonPicture.doctree  Bulk-helium.doctree  Checking-Convergence-(Liquid-Helium-Tutorial).doctree  Constructing-a-density-matrix.doctree  Developer's-Guide.doctree  FC7.doctree  Function.doctree  Getting-Started.doctree  Getting_Started.doctree  H2.doctree  Helium-File-2.doctree  HeliumSuperfluidInput-this.doctree  Home.doctree  Hydrogen-Molecule.doctree  Importance-of-ShiftMove.doctree  Input-Consistency.doctree  Input.doctree  Installing.doctree  Lambda-for-He-4.doctree  LoopRotating.doctree  Moves.doctree  NumImage-approximation.doctree  Observables.doctree  Parallel.doctree  Parallelization.doctree  Particle-in-a-Box.doctree  ParticleBox.doctree  Path-Integral-Superfluidity.doctree  PathPicture.doctree  Quad.doctree  Samples.doctree  SimpleHarmonicOscillator.doctree  SuperfluidGraph-10ptcl.doctree  System.doctree  TimeSlice-Relabelling.doctree  (+7 more)
source/: .Actions.rst.swp  .Algorithm.rst.swp  .Getting-Started.rst.swp  .Home.rst.swp  .Input.rst.swp  .Moves.rst.swp  .Observables.rst.swp  .Parallel.rst.swp  .System.rst.swp  .Tutorials.rst.swp  .User-Guide.rst.swp  .index.rst.swp  Actions.rst  Algorithm.rst  Annotated.rst  Basic-helium-input-file.rst  BosonPicture.rst  Bulk-helium.rst  Checking-Convergence-(Liquid-Helium-Tutorial).rst  Developer's-Guide.rst  H2.rst  Helium-File-2.rst  HeliumSuperfluidInput-this.rst  Home.rst  Lambda-for-He-4.rst  Moves.rst  NumImage-approximation.rst  Observables.rst  Parallelization.rst  Particle-in-a-Box.rst  ParticleBox.rst  Quad.rst  SimpleHarmonicOscillator.rst  SuperfluidGraph-10ptcl.rst  System.rst  Tutorials.rst  User-Guide.rst  Yukawa-liquid.rst  conf.py  index.rst
src/: Blitz.h  Common.cc  Common.h  EventClass.cc  EventClass.h  FreeParticles.cc  GridClass.cc  GridClass.h  InitPaths.cc  LoopClass.cc  LoopClass.h  Main.cc  MirroredClass.cc  MirroredClass.h  MoleculeHelper.cc  MoleculeHelper.h  PIMCClass.cc  PIMCClass.h  ParseCommand.cc  ParseCommand.h  PathClass.cc  PathClass.h  PathDataClass.cc  PathDataClass.h  QMCWrapper.cc  QMCWrapper.h  RunInfoClass.h  SpeciesClass.cc  SpeciesClass.h  SwitchClass.cc  SwitchClass.h  WormHelper.cc  WriteData.cc  WriteData.h  config.h  nan.h
src/Actions/: ActionBase.cc  ActionBase.h  ActionsClass.cc  ActionsClass.h  BlendActions.cc  BlendActions.h  CummingsWaterPotential.cc  CummingsWaterPotential.h  DavidLongRangeClass.cc  DavidLongRangeClass.h  DavidLongRangeClassYk.cc  DavidLongRangeClassYk.h  DavidLongRangeClassYk2.cc  DavidLongRangeClassYk2.h  DeterminantGradient.tex  DiagonalActionClass.cc  DiagonalActionClass.h  EAMClass.cc  EAMClass.h  ExternalPotential.cc  ExternalPotential.h  FixedPhase.tex  FreeNodalActionClass.cc  FreeNodalActionClass.h  HarmonicPotential.cc  HarmonicPotential.h  IlkkaLongRangeClass.cc  IlkkaLongRangeClass.h  KineticClass.cc  KineticClass.h  KineticRotorClass.cc  KineticRotorClass.h  KineticVibrationClass.cc  KineticVibrationClass.h  LongRangeClass.cc  LongRangeClass.h  LongRangeCoulombClass.cc  LongRangeCoulombClass.h  LongRangePotClass.cc  LongRangePotClass.h  (+60 more)
src/Communication/: Communication.cc  Communication.h
src/Ewald/: .OptimizedBreakup.cc.swp  .OptimizedBreakup.h.swp  .ewald.cc.swp  .main.cc.swp  OptimizedBreakup.cc  OptimizedBreakup.h  ewald.cc
src/Fitting/: Ellipsoid.cc
src/IO/: FileExpand.h  IO.cc  IO.h  IOASCII.cc  IOASCII.h  IOBase.h  IOHDF5.cc  IOHDF5.h  IOVar.h  IOVarASCII.h  IOVarBase.h  IOVarHDF5.cc  IOVarHDF5.h  InputFile.cc  InputFile.h  InputOutput.cc  InputOutput.h  InputOutputASCII.cc  InputOutputASCII.h  InputOutputBase.h  InputOutputHDF5.cc  InputOutputHDF5.h
src/Integration/: .Integrate.cc.swp  .Integrate.h.swp  GKIntegration.cc  GKIntegration.h  HermiteQuad.cc  HermiteQuad.h  Integrate.cc  Integrate.h  RungeKutta.h  Standard.h  TestHermite.cc  TestIntegrate.cc
src/MatrixOps/: GJ.m  GJblock.m  MatrixOps.cc  MatrixOps.h
src/Moves/: AVBMove.cc  AVBMove.h  BisectionBlock.cc  BisectionBlock.h  BisectionJosephsonStage.cc  BisectionJosephsonStage.h  BisectionSphereBlock.cc  (+108 more)
(+268 files in other folders)
